--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { version = "0.53", features = ["tcp", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros", "kad", "identify", "autonat", "dcutr", "mdns"] }
+libp2p = { version = "0.53", features = ["tcp", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros", "kad", "identify", "autonat", "dcutr", "mdns", "gossipsub"] }
 tokio = { version = "1.36", features = ["full"] }
 futures = "0.3"
 env_logger = "0.10"
