--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ tokio = { version = "1.36", features = ["full"] }
 futures = "0.3"
 env_logger = "0.10"
 log = "0.4"
-clap = { version = "4.5", features = ["derive"] } 
+clap = { version = "4.5", features = ["derive"] }
+public-ip = "0.2" 
